--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <head>
     <meta charset="utf-8">
     <title>4</title>
-	<link rel="stylesheet/less" type="text/css" href="styles.less" />
+	<link rel="stylesheet/less" type="text/css" href="style.less" />
 	<script src="https://cdn.jsdelivr.net/npm/less" ></script>
-	<link rel="stylesheet/less" type="text/css" href="styles.less">
 	<link rel="stylesheet/less" type="text/css" href="small_style.less" media="screen and (min-width:400px) and (max-width:900px)">
 </head>
 
